Implement Binance WS

--- a/codebase/Application/Admin/View/Trade/marketEdit.html
+++ b/codebase/Application/Admin/View/Trade/marketEdit.html
@@ -219,7 +219,7 @@
 										>Huobi Websocket</option>
 										<option value="3"
 										<eq name="data.socket_type" value="3">selected</eq>
-										>Other {Currently not available}</option>
+										>Binance Websocket</option>
 										</select>
 									</td>
 									<td class="item-note">Orderbook+Tradelog+Market data</td>
